syntax = "proto3";



package auth;

option java_multiple_files = true;
option java_package = "com.poc.article.grpc";
option java_outer_classname = "AuthProto";
option java_generate_equals_and_hash = true;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string tenantId = 3;
}
